--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
+altair==5.5.0
 annotated-types==0.7.0
 anyio==4.9.0
 appnope==0.1.4
 asttokens==3.0.0
+attrs==25.3.0
+blinker==1.9.0
 blis==1.3.0
+cachetools==5.5.2
 catalogue==2.0.10
 certifi==2025.4.26
 charset-normalizer==3.4.2
@@ -19,6 +23,8 @@ emoji==2.14.1
 executing==2.2.0
 fastapi==0.115.12
 fonttools==4.58.0
+gitdb==4.0.12
+GitPython==3.1.44
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
@@ -30,6 +36,8 @@ ipython_pygments_lexers==1.1.1
 jedi==0.19.2
 Jinja2==3.1.6
 joblib==1.5.0
+jsonschema==4.24.0
+jsonschema-specifications==2025.4.1
 jupyter_client==8.6.3
 jupyter_core==5.7.2
 kiwisolver==1.4.8
@@ -43,10 +51,11 @@ matplotlib==3.10.3
 matplotlib-inline==0.1.7
 mdurl==0.1.2
 murmurhash==1.0.12
+narwhals==1.42.1
 nest-asyncio==1.6.0
 nltk==3.9.1
 numpy==2.2.5
-packaging==25.0
+packaging==24.2
 pandas==2.2.3
 parso==0.8.4
 pexpect==4.9.0
@@ -55,11 +64,14 @@ platformdirs==4.3.8
 pluggy==1.6.0
 preshed==3.0.9
 prompt_toolkit==3.0.51
+protobuf==6.31.1
 psutil==7.0.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
+pyarrow==20.0.0
 pydantic==2.11.4
 pydantic_core==2.33.2
+pydeck==0.9.1
 Pygments==2.19.1
 pyparsing==3.2.3
 pytest==8.4.0
@@ -67,14 +79,17 @@ python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
 pytz==2025.2
 pyzmq==26.4.0
+referencing==0.36.2
 regex==2024.11.6
 requests==2.32.3
 rich==14.0.0
+rpds-py==0.25.1
 scikit-learn==1.6.1
 scipy==1.15.3
 shellingham==1.5.4
 six==1.17.0
 smart-open==7.1.0
+smmap==5.0.2
 sniffio==1.3.1
 spacy==3.8.5
 spacy-legacy==3.0.12
@@ -82,9 +97,12 @@ spacy-loggers==1.0.5
 srsly==2.5.1
 stack-data==0.6.3
 starlette==0.46.2
+streamlit==1.45.1
 svgwrite==1.4.3
+tenacity==9.1.2
 thinc==8.3.6
 threadpoolctl==3.6.0
+toml==0.10.2
 tornado==6.4.2
 tqdm==4.67.1
 traitlets==5.14.3
