--- a/docker/Dockerfile.api
+++ b/docker/Dockerfile.api
@@ -25,5 +25,5 @@ EXPOSE 8000
 
 # 8. Set the default command to start FastAPI using Uvicorn
 # Change api:app to match the module and app variable in your project!
-#CMD ["bash"]
-CMD ["uvicorn", "src.api.main:app", "--host", "0.0.0.0", "--port", "8000"]
+#CMD ["uvicorn", "src.api.main:app", "--host", "0.0.0.0", "--port", "8000"] # for FastAPI
+CMD ["bash", "start.sh"]
