--- a/requirements.txt
+++ b/requirements.txt
@@ -60,6 +60,7 @@ parso==0.8.4
 pexpect==4.9.0
 pillow==11.2.1
 platformdirs==4.3.8
+plotly==6.1.2
 pluggy==1.6.0
 preshed==3.0.9
 prompt_toolkit==3.0.51
