--- a/docker/Dockerfile.streamlit
+++ b/docker/Dockerfile.streamlit
@@ -11,10 +11,8 @@ RUN python -m nltk.downloader stopwords
 
 COPY . .
 
-ENV PORT=8501
-
-CMD ["streamlit", "run", "src/streamlit_app.py", \
-     "--server.port=$PORT", \
-     "--server.address=0.0.0.0", \
-     "--server.enableCORS=false", \
-     "--server.enableXsrfProtection=false"]
+CMD bash -c "streamlit run src/streamlit_app.py \
+    --server.port=\${PORT:-8501} \
+    --server.address=0.0.0.0 \
+    --server.enableCORS=false \
+    --server.enableXsrfProtection=false"
