--- a/docker/Dockerfile.streamlit
+++ b/docker/Dockerfile.streamlit
@@ -12,7 +12,7 @@ RUN python -m nltk.downloader stopwords
 COPY . .
 
 CMD bash -c "streamlit run src/streamlit_app.py \
-    --server.port=\${PORT:-8501} \
+    --server.port=$PORT:-8501} \
     --server.address=0.0.0.0 \
     --server.enableCORS=false \
     --server.enableXsrfProtection=false"
