--- a/docker/Dockerfile.api
+++ b/docker/Dockerfile.api
@@ -20,4 +20,4 @@ RUN python -m nltk.downloader stopwords
 COPY . .
 
 # Execution
-CMD bash -c "uvicorn src.api.main:app --host 0.0.0.0 --port \${PORT:-8000}"
+CMD bash -c "uvicorn src.api.main:app --host 0.0.0.0 --port ${PORT:-8000}"
